--- a/www/aultimapagina/frontend/package.json
+++ b/www/aultimapagina/frontend/package.json
@@ -10,8 +10,12 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "date-fns": "^2.25.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-html-parser": "^2.0.2",
     "react-infinite-scroller": "^1.2.4",
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.3.0",
